# sel4bench

./: .licenseignore  CMakeLists.txt  Findsel4benchsupport.cmake  Kbuild  Kconfig  Makefile  README.md  benchmark_list.cmake  easy-settings.cmake  settings.cmake
apps/fault/: CMakeLists.txt  Kbuild  Kconfig  Makefile
apps/fault/src/: main.c
apps/hardware/: CMakeLists.txt  Kbuild  Kconfig  LICENSE_BSD2.txt  Makefile
apps/hardware/src/: main.c
apps/ipc/: CMakeLists.txt  Kbuild  Kconfig  Makefile
apps/ipc/include/arch/arm/arch/arch/: ipc.h
apps/ipc/include/arch/arm/armv/armv6/armv/: ipc.h
apps/ipc/include/arch/arm/armv/armv7-a/armv/: ipc.h
apps/ipc/include/arch/x86/arch/arch/: ipc.h
apps/ipc/src/: main.c
apps/irq/: CMakeLists.txt  Kbuild  Kconfig  Makefile
apps/irq/src/: main.c
apps/irquser/: CMakeLists.txt  Kbuild  Kconfig
apps/irquser/src/: main.c
apps/page_mapping/: CMakeLists.txt  Kbuild  Kconfig  Makefile
apps/page_mapping/src/: main.c
apps/scheduler/: CMakeLists.txt  Kbuild  Kconfig  Makefile
apps/scheduler/include/arch/arm/arch/: signal.h
apps/scheduler/src/: main.c
apps/sel4bench/: CMakeLists.txt  Kbuild  Kconfig  Makefile
apps/sel4bench/include/arch/arm/arch/arch/: ipc.h
apps/sel4bench/include/arch/arm/armv/armv6/armv/: ipc.h
apps/sel4bench/include/arch/arm/armv/armv7-a/armv/: ipc.h
apps/sel4bench/include/arch/x86/arch/arch/: ipc.h
apps/sel4bench/include/arch/x86_64/arch/arch/: ipc.h
apps/sel4bench/scripts/: input_beagle  input_kzm  input_vtd2  kzm_patch.pl
apps/sel4bench/src/: aes.c  allocator_helpers.c  allocator_helpers.h  benchmark.h  env.h  fault.c  hardware.c  helpers.c  helpers.h  ipc.c  ipc.h  ipc_vspace.c  ipc_vspace.h  irq.c  json.c  json.h  main.c  math.c  math.h  mem.c  mem.h  page_mapping.c  printing.c  printing.h  processing.c  processing.h  scheduler.c  signal.c  smp.c  sync.c  test.h  timeout.c  timing.c  timing.h  trace_clearMemory.c  ulscheduler.c  util.h  vcpu.c
apps/sel4bench/src/arch/arm/: plat.c
apps/sel4bench/src/arch/x86/: plat.c
apps/sel4bench/src/plat/bcm2837/: plat.c
apps/sel4bench/src/plat/imx6/: plat.c
apps/sel4bench/src/plat/pc99/: plat.c
apps/sel4bench/src/plat/realview/: plat.c
apps/sel4bench/src/plat/tx2/: plat.c  vcpu.c
apps/sel4bench/src/util/: ansi.h
apps/signal/: CMakeLists.txt  Kbuild  Kconfig  Makefile
apps/signal/src/: main.c
apps/smp/: CMakeLists.txt  Kbuild  Kconfig  Makefile
apps/smp/src/: main.c  rnorrexp.h
apps/sync/: CMakeLists.txt  Kbuild  Kconfig  Makefile
apps/sync/src/: main.c
apps/trace_clearMemory/: CMakeLists.txt  trace_kernel_clearMemory.h
apps/trace_clearMemory/src/: main.c
apps/vcpu/: CMakeLists.txt  LICENSE_BSD2.txt
apps/vcpu/src/: guest.c  guest_asm.S  main.c
experimental-configs/: arndale_release_O2_defconfig  arndale_release_O2_nofastpath_defconfig  arndale_release_compcert_defconfig  arndale_release_compcert_nofastpath_defconfig  beagle_release_O2_defconfig  beagle_release_O2_nofastpath_defconfig  beagle_release_compcert_defconfig  beagle_release_compcert_nofastpath_defconfig  ia32_release_O2_defconfig  ia32_release_O2_nofastpath_defconfig  ia32_release_compcert_defconfig  ia32_release_compcert_nofastpath_defconfig  inforce_release_O2_defconfig  inforce_release_O2_nofastpath_defconfig  inforce_release_compcert_defconfig  inforce_release_compcert_nofastpath_defconfig  kzm_release_O1_defconfig  kzm_release_O1_nofastpath_defconfig  kzm_release_O2_defconfig  kzm_release_O2_nofastpath_defconfig  kzm_release_compcert_defconfig  kzm_release_compcert_nofastpath_defconfig  odroidx_release_O2_defconfig  odroidx_release_O2_nofastpath_defconfig  odroidx_release_compcert_defconfig  odroidx_release_compcert_nofastpath_defconfig  odroidxu_release_O2_defconfig  odroidxu_release_O2_nofastpath_defconfig  odroidxu_release_compcert_defconfig  odroidxu_release_compcert_nofastpath_defconfig  sabre_release_O2_defconfig  sabre_release_O2_nofastpath_defconfig  sabre_release_compcert_defconfig  sabre_release_compcert_nofastpath_defconfig  zynq7000_release_O2_defconfig  zynq7000_release_O2_nofastpath_defconfig  zynq7000_release_compcert_defconfig  zynq7000_release_compcert_nofastpath_defconfig
libsel4benchsupport/: CMakeLists.txt  Kbuild  Kconfig  Makefile
libsel4benchsupport/arch_include/arm/arch/: fault.h  hardware.h  ipc.h  signal.h  smp.h
libsel4benchsupport/arch_include/riscv/arch/: fault.h  hardware.h  ipc.h  signal.h  smp.h
libsel4benchsupport/arch_include/x86/arch/: fault.h  hardware.h  ipc.h  signal.h  smp.h
libsel4benchsupport/arch_include/x86_64/arch/: ipc.h
libsel4benchsupport/include/: aes.h  benchmark.h  benchmark_types.h  cspace.h  fault.h  hardware.h  ipc.h  irq.h  page_mapping.h  scheduler.h  signal.h  smp.h  sync.h  timeout.h  trace_clearMemory.h  ulscheduler.h  vcpu.h
libsel4benchsupport/include/sel4benchsupport/: signal.h
libsel4benchsupport/sel4_arch_include/aarch32/sel4_arch/: fault.h  hardware.h  ipc.h  signal.h  timeout.h
libsel4benchsupport/sel4_arch_include/aarch64/sel4_arch/: fault.h  hardware.h  ipc.h  signal.h
libsel4benchsupport/sel4_arch_include/ia32/sel4_arch/: fault.h  hardware.h  ipc.h  signal.h  smp.h  timeout.h
libsel4benchsupport/sel4_arch_include/x86_64/sel4_arch/: fault.h  hardware.h  ipc.h  signal.h  smp.h  timeout.h
libsel4benchsupport/src/: support.c  support.h
libsel4benchsupport/src/arch/arm/: support.c
libsel4benchsupport/src/arch/riscv/: support.c
libsel4benchsupport/src/arch/x86/: support.c
libsel4benchsupport/src/mach/imx/: support.c
master-configs/: arndale_release_O2_defconfig  arndale_release_O2_nofastpath_defconfig  arndale_release_compcert_defconfig  arndale_release_compcert_nofastpath_defconfig  bbone_black_release_O2_defconfig  bbone_black_release_O2_nofastpath_defconfig  beagle_criticality_defconfig  beagle_release_O2_defconfig  beagle_release_O2_nofastpath_defconfig  beagle_release_compcert_defconfig  beagle_release_compcert_nofastpath_defconfig  hikey_aarch32_release_O2_defconfig  hikey_aarch64_release_O2_defconfig  ia32_criticality_defconfig  kzm_release_O1_defconfig  (+44 more)
(+18 files in other folders)
